# GoogleMock-Example

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  linux.yml  tests.yml  windows.yml
src/: CMakeLists.txt  PasswordEncoder.h  User.h  UserRepository.h  UserService.h
tst/: CMakeLists.txt  UserServiceTest.cpp  main.cpp
tst/mocks/: MockPasswordEncoder.h  MockUserRepository.h
